--- a/src/pages/authenticated/dashboard/dashboard.module.css
+++ b/src/pages/authenticated/dashboard/dashboard.module.css
@@ -12,7 +12,7 @@
   box-shadow: 1px 7px 5px 0px rgba(0, 0, 0, 0.17);
   border-radius: 8px;
   width: 350px;
-  height: 135px;
+  min-height: 135px;
   padding: 30px;
 }
 .dashboard_item h1 {
@@ -21,7 +21,7 @@
   margin-bottom: 0;
   padding-bottom: 0;
   font-weight: 700;
-  font-size: 25px;
+  /* font-size: 25px; */
 }
 .dashboard_item h4 {
   font-size: 13px;
